
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int cc ;
typedef int FILE ;


 char* CODE ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*) ;
 int snprintf (char*,int,char*) ;
 int system (char*) ;

void buildui() {
FILE *fp;
 char cc[100];
 fp = fopen("/tmp/ui.c", "w");
 fprintf(fp, CODE);
 fclose(fp);
 snprintf(cc, sizeof(cc), "cc -o /tmp/ui /tmp/ui.c");
 system(cc);
}
