; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19676.c_buildui.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19676.c_buildui.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/tmp/ui.c\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@CODE = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [24 x i8] c"cc -o /tmp/ui /tmp/ui.c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buildui() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca [100 x i8], align 16
  %3 = call i32* @fopen(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = load i8*, i8** @CODE, align 8
  %6 = call i32 @fprintf(i32* %4, i8* %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @fclose(i32* %7)
  %9 = getelementptr inbounds [100 x i8], [100 x i8]* %2, i64 0, i64 0
  %10 = call i32 @snprintf(i8* %9, i32 100, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %11 = getelementptr inbounds [100 x i8], [100 x i8]* %2, i64 0, i64 0
  %12 = call i32 @system(i8* %11)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32*, i8*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
